fixed wrong padding for the logo

--- a/report/css/bootstrap-overrides.css
+++ b/report/css/bootstrap-overrides.css
@@ -58,7 +58,7 @@
 
     ## fix for the logo
     .navbar-brand {
-      padding: 0px 10px;
+      padding: 0px 0px;
       max-width: 250px;
     }
 
